--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,8 @@
     height: 100%;
     width: 100%;
     float: left;
+    position: fixed;
+    z-index: 101;
 }
 .article {
     -webkit-box-shadow: 2px 2px 12px 0px rgba(0,0,0,0.55);
