Changed background color

--- a/css/style.css
+++ b/css/style.css
@@ -27,12 +27,10 @@
     display: inline-block;
 }
 #single {
-    background-color: whitesmoke;
-    height: 100%;
-    width: 100%;
+    margin-left: 10%;
+    width: 30%;
     float: left;
     position: fixed;
-    z-index: 101;
 }
 .article {
     -webkit-box-shadow: 2px 2px 12px 0px rgba(0,0,0,0.55);
